--- a/main.html
+++ b/main.html
@@ -8,8 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<h1>&gt;Words Counter&lt;</h1>
+	<div id="container">
+		<textarea id="evaluatedText" rows="10" placeholder="Type your words here..."></textarea>
+		<span>Words : <h3 id="wordCount">0</h3></span>
+		<span>Characters : <h3 id="charCount">0</h3></span>
+	</div>
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
